--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <div class = "header_main">
   <div class= "header_left">
-    <%= link_to "イメージAPI", "#" %>
+    <%= link_to "イメージAPI", root_path %>
   </div>
   <div class= "header_right">
-    <%= link_to "トップページへ戻る", "#" %>
+    <%= link_to "一覧ページ", "#" %>
   </div>
 </div>
