--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -1,4 +1,5 @@
-.input-form-main {
+/* posts#new */
+.form-main {
   height: 50vw;
   width: 100vw;
   background-color: #e7e7e7;
@@ -51,3 +52,5 @@
   border-radius: 5px;
   border: 1px solid black;
 }
+
+/* posts#show */
