--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 
-<div class="input-form-main">
+<div class="form-main">
   <div class="input-form-container">
     <p class="input-title">画像を選択する</p>
     <%= form_with(model: @post, local: true, class:"input-form") do |f| %>
