--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,6 +3,6 @@
     <%= link_to "イメージAPI", root_path %>
   </div>
   <div class= "header_right">
-    <%= link_to "一覧ページ", "#" %>
+    <%= link_to "一覧ページ", posts_path %>
   </div>
 </div>
