--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="form-main">
   <div class="index-lists">
     <% @posts.each do |post| %>
-        <%= link_to "#" do %>
+        <%= link_to post_path(post.id) do %>
           <div class="index-list">
             <p class="image-num">No.<%= post.id %></p>
             <%= image_tag post.image, class:"index-image" %>
