--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,8 @@
 <div class="form-main">
   <div class="show-form-container">
     <%= image_tag @post.image, class:"show-image" %>
-    <%# APIの内容を記述する(each分) %>
-    
+    <% @descriptions.each do |description| %>
+    <%= description %>
+    <% end %>
   </div>
 </div>
